[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Objects/Bonfire.gd" type="Script" id=1]
[ext_resource path="res://assets/art/Objects/Bonfire2.png" type="Texture" id=2]
[ext_resource path="res://assets/art/Objects/Bonfire1.png" type="Texture" id=3]
[ext_resource path="res://src/UI/PressUp.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/Particles/fire_particle.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 13 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0227273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
direction = Vector3( 0, 3, 0 )
gravity = Vector3( 0, -26, 0 )
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
linear_accel_random = 1.0
damping = 2.0
scale = 0.8
scale_random = 0.3
scale_curve = SubResource( 4 )
color = Color( 0.858824, 0.180392, 0.0470588, 1 )

[node name="Bonfire" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="PressUp" parent="." instance=ExtResource( 4 )]

[node name="Rocks" type="Sprite" parent="."]
z_index = -1
z_as_relative = false
texture = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 2 )
position = Vector2( 0, 14 )
z_index = -2
z_as_relative = false
emitting = false
amount = 12
lifetime = 1.5
preprocess = 0.1
speed_scale = 1.5
randomness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 5 )

[node name="Sword" type="Sprite" parent="."]
z_index = -3
z_as_relative = false
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Bonfire_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Bonfire_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
